--- a/src/main/resources/assets/boylemod/lang/es_ar.json
+++ b/src/main/resources/assets/boylemod/lang/es_ar.json
@@ -1,3 +1,4 @@
 {
-  "item.boylemod.aluminum_ingot" : "Lingote de aluminio"
+  "item.boylemod.aluminum_ingot" : "Lingote de aluminio",
+  "item.boylemod.copper_ingot": "Lingote de cobre"
 }
