--- a/src/main/resources/assets/boylemod/lang/es_ar.json
+++ b/src/main/resources/assets/boylemod/lang/es_ar.json
@@ -5,6 +5,7 @@
   "item.boylemod.lead_ingot": "Lingote de plomo",
   "item.boylemod.nickel_ingot": "Lingote de niquel",
   "item.boylemod.cobalt_ingot": "Lingote de cobalto",
+  "item.boylemod.silver_ingot": "Lingote de plata",
 
   "itemGroup.BoyleMod:Items": "BoyleMod: Materiales"
 }
