--- a/src/main/resources/assets/boylemod/lang/es_ar.json
+++ b/src/main/resources/assets/boylemod/lang/es_ar.json
@@ -6,6 +6,7 @@
   "item.boylemod.nickel_ingot": "Lingote de niquel",
   "item.boylemod.cobalt_ingot": "Lingote de cobalto",
   "item.boylemod.silver_ingot": "Lingote de plata",
+  "item.boylemod.oxygen_bottle": "Oxigeno embotellado",
 
   "itemGroup.BoyleMod:Items": "BoyleMod: Materiales"
 }
