First block: Aluminum_block

--- a/src/main/resources/assets/boylemod/lang/es_ar.json
+++ b/src/main/resources/assets/boylemod/lang/es_ar.json
@@ -19,5 +19,7 @@
   "item.boylemod.cesium": "Cesio",
   "item.boylemod.francium": "Francio",
 
+  "block.boylemod.aluminum_block": "Bloque de aluminio",
+
   "itemGroup.BoyleMod:Items": "BoyleMod: Items"
 }
