Adding Aluminum Block loot table and added blocks tab

--- a/src/main/resources/assets/boylemod/lang/es_ar.json
+++ b/src/main/resources/assets/boylemod/lang/es_ar.json
@@ -21,5 +21,6 @@
 
   "block.boylemod.aluminum_block": "Bloque de aluminio",
 
-  "itemGroup.BoyleMod:Items": "BoyleMod: Items"
+  "itemGroup.BoyleMod:Items": "BoyleMod: Items",
+  "itemGroup.BoyleMod:Blocks": "BoyleMod: Bloques"
 }
