Adding copper block + recipes

--- a/src/main/resources/assets/boylemod/lang/es_ar.json
+++ b/src/main/resources/assets/boylemod/lang/es_ar.json
@@ -20,6 +20,7 @@
   "item.boylemod.francium": "Francio",
 
   "block.boylemod.aluminum_block": "Bloque de aluminio",
+  "block.boylemod.copper_block": "Bloque de cobre",
 
   "itemGroup.BoyleMod:Items": "BoyleMod: Items",
   "itemGroup.BoyleMod:Blocks": "BoyleMod: Bloques"
